--- a/sass/partials/styleguide/_news.scss
+++ b/sass/partials/styleguide/_news.scss
@@ -34,7 +34,7 @@ News Story Title at top of page
   font-size: 1em;
   padding-top: 0;
   padding-bottom: .5em;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.3;
   color: #333;
 }
@@ -98,7 +98,7 @@ News Story more headlines
   font-size: .82em;
   padding-top: 0;
   padding-bottom: .5em;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.3;
   color: #333;
  @include breakpoint($desk) {
@@ -157,7 +157,7 @@ Special for news headlines block on front
   font-size: .82em;
   padding-top: 0;
   padding-bottom: .5em;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.3;
   color: #333;
 }
