--- a/sass/partials/styleguide/_style-guide.scss
+++ b/sass/partials/styleguide/_style-guide.scss
@@ -106,7 +106,7 @@ header {
   display: block;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1000300;
   padding: 8px 5px;
   width: 100%;
   }
@@ -119,7 +119,7 @@ header {
 
 .l-navband {
   display: block;
-  z-index: 100;
+  z-index: 1000300;
   background-color: $managedcarered;
   position: fixed;
   height: 40px;
@@ -143,7 +143,7 @@ header {
   height: 32px;
   width: 100%;
   max-width: 1080px;
-  z-index: 100;
+  z-index: 1000300;
   background-color: #dedede;
   padding: 0;
   }
@@ -464,4 +464,15 @@ header {
   text-align: right;
   }
   }
+
+
+#admin-menu,
+#admin-menu .dropdown {
+  z-index: 1000400;
+}
+
+
+.admin-menu-position-fixed {
+}
+
 
